CSS - fixed overflow

--- a/css/main.css
+++ b/css/main.css
@@ -60,7 +60,7 @@ html, body {
   left: 0; /*sets margins to 0*/
   height: 100%;
   width: 100%; /*makes it take up the whole window*/
-  overflow: auto;
+  overflow: visible;
   background-color: rgba(181, 25, 92, 0.9);
 
   display: block;
@@ -122,7 +122,7 @@ input::-webkit-inner-spin-button {
   left: 0; /*sets margins to 0*/
   height: 100%;
   width: 100%; /*makes it take up the whole window*/
-  overflow: auto;
+  overflow: visible;
   line-height: 30px;
   background-color: rgba(181, 25, 92, 0.9);
 
